[package]
name = "tipb"
version = "0.0.1"
edition = "2018"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec", "protobuf-build/grpcio-protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/grpcio-prost-codec", "protobuf-build/prost-codec", "grpcio/prost-codec"]

[lib]
name = "tipb"

[dependencies]
protobuf = "2"
prost = { version = "0.7", optional = true }
prost-derive = { version = "0.7", optional = true }
futures = "0.3.5"
lazy_static = { version = "1.3", optional = true }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false }
